# ISIT

./: .editorconfig  .gitignore  FIX_EXPENSE_TYPE_ERROR.md  FIX_FRONTEND.md  FRONTEND_SETUP.md  PROJECT_ROADMAP.md  PSQL_ACCESS.md  QUICK_START.md  README.md  START_GUIDE.md  docker-compose.yml  update_to_russian.sql  ОТЧЕТ_ПО_РАБОТЕ.md
backend/: Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  Makefile  README.md  TESTING.md
backend/migrations/: 20250101000000_initial_schema.sql  20250101000001_seed_data.sql  20250101000002_seed_default_user.sql  20250101000003_translate_to_russian.sql  20250113000000_add_expense_fields.sql  20250113010000_add_funding_sources.sql  20250113020000_remove_funding_source_check.sql  20251113030000_seed_sample_expenses_for_analytics.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/domain/: category.rs  department.rs  expense.rs  funding_source.rs  mod.rs  user.rs
backend/src/http/: category_handlers.rs  department_handlers.rs  expense_handlers.rs  funding_source_handlers.rs  mod.rs  user_handlers.rs
backend/src/repositories/: expense_repo.rs  mod.rs  user_repo.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin-panel/: page.tsx
frontend/src/store/: StateSchema.ts  store.ts
frontend/src/styles/: fonts.ts  theme.ts
frontend_old_20251113_023913/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend_old_20251113_023913/src/: App.tsx  main.tsx
(+52 files in other folders)
